--- a/first-project/src/app/app.component.css
+++ b/first-project/src/app/app.component.css
@@ -15,6 +15,50 @@
     display: none;
   }
   
+
+  .add {
+    background-color: rgba(12, 177, 12, 0.822);
+    border: none;
+    color: white;
+    padding: 10px 30px;
+    margin: 8px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 10px;
+  }
+
+  .undo{
+    background-color: rgb(209, 42, 42);
+    border: none;
+    color: white;
+    padding: 10px 30px;
+    margin: 8px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 10px;
+  }
+  .clean {
+    background-color: rgb(248, 112, 0);
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    margin: 10px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 10px;
+  }
+  
+  button {
+    background-color: rgba(182, 26, 255, 0.753);
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    margin: 10px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 10px;
+  }
+  
   .content {
     overflow: auto;
     height: 1000px;
