--- a/first-project/src/app/app.component.html
+++ b/first-project/src/app/app.component.html
@@ -6,12 +6,13 @@
     </nav>
     <div class="row">
       <input
-        class="col s8"
+        class="col s8" 
         type="text"
         placeholder="Dodaj zadanie i datę wykonania"
-      />
+          #nameInput
+        />
       <input class="col s2 disabled" type="date" />
-      <button class="btn-floating">+</button>
+      <button class="btn-floating" (click)="createTask(nameInput.value)" >+</button>
     </div>
   
     <ul class="collection">
@@ -31,7 +32,7 @@
         <span class="col done">{{ config.occurtask }}</span>
       </li>
     </ul>
-    <button class="clean" onclick="alert('Wyczyszczono Liste pomyśnie!')">
+    <button class="clean" (click)="clearTasks() ">
       Wyczyść
       </button>
     
