Implemnts ng module

--- a/first-project/src/app/app.component.html
+++ b/first-project/src/app/app.component.html
@@ -9,10 +9,15 @@
         class="col s8" 
         type="text"
         placeholder="Dodaj zadanie i datę wykonania"
-          #nameInput
+          
+          [(ngModel)]="taskName"
         />
-      <input class="col s2 disabled" type="date" />
-      <button class="btn-floating" (click)="createTask(nameInput.value)" >+</button>
+        <input class="col s2 disabled" type="date" [(ngModel)]="taskDate" />
+      <button 
+      class="btn-floating" 
+      (click)="createTask();" 
+      [disabled]="taskName ==='' || taskDate === ''"
+      >+</button>
     </div>
   
     <ul class="collection">
