--- a/first-project/src/app/app.component.css
+++ b/first-project/src/app/app.component.css
@@ -17,7 +17,7 @@
  
   .background{
     background-color: rgba(255, 255, 255, 0.822);
-    background-size: cover;
+     background-size: cover;
     height: 900px;
     width: 100%;
     display: flex;
@@ -29,6 +29,7 @@
 
   .Nag {
     background-color: rgba(192, 190, 190, 0.795); 
+    border-radius: 10px;
     text-align: center;
     font-family: Lato;
     font-style: normal;
@@ -42,7 +43,7 @@
     
   }
   .container{
-    
+    border-radius: 10px;
       font-family: Lato;
       font-size: 32px;
       size: 1000px;
@@ -71,6 +72,7 @@
     text-align: center;
     text-decoration: none;
     font-size: 20px;
+    border-radius: 10px;
   }
 
   .undo{
@@ -82,6 +84,7 @@
     text-align: center;
     text-decoration: none;
     font-size: 20px;
+    border-radius: 10px;
   }
   .clean {
     background-color: rgb(252, 113, 0);
@@ -92,6 +95,7 @@
     text-align: center;
     text-decoration: none;
     font-size: 10px;
+    border-radius: 10px;
   }
 button {
     background-color: rgba(72, 89, 95, 0.753);
@@ -102,11 +106,13 @@ button {
     text-align: center;
     text-decoration: none;
     font-size: 20px;
+    border-radius: 10px;
   }
  .collection{
   border-collapse: collapse;
   border: 1px solid white;
   background-color: rgba(211, 208, 208, 0.541);
+  border-radius: 10px;
 }
   
   
@@ -115,6 +121,7 @@ button {
 .topnav {
   overflow: hidden;
   background-color: #e9e9e9;
+  border-radius: 10px;
 }
 
 /* Style the links inside the navigation bar */
@@ -132,12 +139,14 @@ button {
 .topnav a:hover {
   background-color: #ddd;
   color: black;
+  
 }
 
 /* Style the "active" element to highlight the current page */
 .topnav a.active {
   background-color: #6a7177;
   color: white;
+  border-radius: 10px;
 }
 .topnav input.date[type=date] {
   float: right;
@@ -146,6 +155,7 @@ button {
   margin-top: 8px;
   margin-right: 16px;
   font-size: 17px;
+  border-radius: 10px;
 }
 
 /* Style the search box inside the navigation bar */
